# CCSA_Auto

./: .gitignore  README.md  app.py  main.py  migrate_add_user_name.py  migrate_score_records.py  migrate_user_state.py  pyproject.toml  session.json  test_loguru.py
ccsa_auto/admin_v2/: __init__.py
ccsa_auto/admin_v2/components/: __init__.py
ccsa_auto/admin_v2/pages/: __init__.py  announcements.py  dashboard.py  logs.py  settings.py  tasks.py  users.py
ccsa_auto/admin_v2/services/: announcement_service.py  dashboard_service.py  log_service.py  task_service.py  user_service.py
ccsa_auto/admin_v2/stores/: admin_store.py  ui_store.py
ccsa_auto/core/: __init__.py  config.py  database.py  logger.py  models.py  system_config.py
ccsa_auto/modules/admin/: __init__.py  service.py
ccsa_auto/modules/announcement/: __init__.py  service.py
ccsa_auto/modules/auth/: __init__.py  models.py  service.py  session_manager.py  user_state.py
ccsa_auto/modules/logging/: __init__.py  models.py  service.py
ccsa_auto/modules/task/: README_SCORE_CONTROL.md  __init__.py  scheduler.py  score_control.py  score_strategy.py  score_tracker.py  service.py
ccsa_auto/ui/components/: announcement_section.py  profile_section.py  task_section.py
ccsa_auto/ui/core/: app_core.py
ccsa_auto/utils/: __init__.py  jwt.py  password.py  timezone.py
docs/: SCORE_STRATEGY_DESIGN.md
refactored_code/: auth_module.py  config.py  daily_question.py  logger.py  monthly_exam.py  weekly_lesson.py
scripts/: seed_question_bank.py
接口信息收集/: url.txt  每周一课.txt  每日一题全部url.txt  每月一考.txt
(+46 files in other folders)
